# adk-fact-checker

./: .gitignore  README.md  access-through.py  pyproject.toml
eval/: test_eval.py
fact_checker/: __init__.py  agent.py
fact_checker/sub_agents/critic/: agent.py
fact_checker/sub_agents/reviser/: __init__.py  agent.py
